// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateContactForm should render channel 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"set_contact_field\\",\\"aliases\\":[\\"set_contact_name\\",\\"set_contact_language\\",\\"set_contact_channel\\",\\"set_contact_status\\"],\\"name\\":\\"Update Contact\\",\\"description\\":\\"Update the contact\\"}]"
              />
            </div>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="normal "
          >
            <temba-select
              cachekey="0"
              data-testid="temba_select_contact_field"
              errors="[]"
              expressions=""
              name="Contact Field"
              namekey="name"
              placeholder="Select existing contact field or enter a new one"
              searchable="true"
              valuekey="uuid"
              values="[{\\"name\\":\\"Channel\\",\\"id\\":\\"channel\\",\\"type\\":\\"property\\"}]"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_channel"
                errors="[]"
                expressions=""
                name="Channel"
                namekey="name"
                placeholder="Select the channel to use for this contact"
                searchable="true"
                valuekey="uuid"
                values="[{\\"uuid\\":\\"763e4844-3e1b-407a-a1b5-5fdfcd308b41\\",\\"name\\":\\"Twilio Channel\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render field 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"set_contact_field\\",\\"aliases\\":[\\"set_contact_name\\",\\"set_contact_language\\",\\"set_contact_channel\\",\\"set_contact_status\\"],\\"name\\":\\"Update Contact\\",\\"description\\":\\"Update the contact\\"}]"
              />
            </div>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="normal "
          >
            <temba-select
              cachekey="0"
              data-testid="temba_select_contact_field"
              errors="[]"
              expressions=""
              name="Contact Field"
              namekey="name"
              placeholder="Select existing contact field or enter a new one"
              searchable="true"
              valuekey="uuid"
              values="[{\\"key\\":\\"age\\",\\"label\\":\\"Age\\"}]"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper normal"
            >
              <input
                data-testid="Field Value"
                name="Field Value"
                placeholder="Enter a new value for Age"
                value="25"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render language 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"set_contact_field\\",\\"aliases\\":[\\"set_contact_name\\",\\"set_contact_language\\",\\"set_contact_channel\\",\\"set_contact_status\\"],\\"name\\":\\"Update Contact\\",\\"description\\":\\"Update the contact\\"}]"
              />
            </div>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="normal "
          >
            <temba-select
              cachekey="0"
              data-testid="temba_select_contact_field"
              errors="[]"
              expressions=""
              name="Contact Field"
              namekey="name"
              placeholder="Select existing contact field or enter a new one"
              searchable="true"
              valuekey="uuid"
              values="[{\\"name\\":\\"Language\\",\\"id\\":\\"language\\",\\"type\\":\\"property\\"}]"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="normal "
            >
              <temba-select
                cachekey="0"
                data-testid="temba_select_language"
                errors="[]"
                expressions=""
                name="Language"
                namekey="name"
                placeholder="Select the language to use for this contact"
                valuekey="uuid"
                values="[{\\"iso\\":\\"eng\\",\\"name\\":\\"eng\\"}]"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`UpdateContactForm should render name 1`] = `
<body>
  <div>
    <div
      class="dialog"
    >
      <div
        class="header set_contact_field"
      >
        <div
          class="title_container"
        >
          <div
            class="title"
          >
            Update Contact
          </div>
          <div
            class="subtitle"
          />
        </div>
      </div>
      <div
        class="content"
      >
        <div
          class=" type_list"
        >
          <p>
            When a contact arrives at this point in your flow...
          </p>
          <div>
            <div
              class="normal "
            >
              <temba-select
                data-testid="temba_select_type"
                errors="[]"
                expressions=""
                name="type"
                namekey="description"
                searchable="true"
                valuekey="type"
                values="[{\\"type\\":\\"set_contact_field\\",\\"aliases\\":[\\"set_contact_name\\",\\"set_contact_language\\",\\"set_contact_channel\\",\\"set_contact_status\\"],\\"name\\":\\"Update Contact\\",\\"description\\":\\"Update the contact\\"}]"
              />
            </div>
          </div>
        </div>
        <p>
          Select what to update
        </p>
        <div
          class="ele"
        >
          <div
            class="normal "
          >
            <temba-select
              cachekey="0"
              data-testid="temba_select_contact_field"
              errors="[]"
              expressions=""
              name="Contact Field"
              namekey="name"
              placeholder="Select existing contact field or enter a new one"
              searchable="true"
              valuekey="uuid"
              values="[{\\"name\\":\\"Name\\",\\"id\\":\\"name\\",\\"type\\":\\"property\\"}]"
            />
          </div>
        </div>
        <div
          class="value"
        >
          <div
            class="ele"
          >
            <div
              class="wrapper normal"
            >
              <input
                data-testid="Name"
                name="Name"
                placeholder="Enter a new name for the contact"
                value="Jane Goodall"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="footer"
      >
        <div
          class="buttons"
        >
          <div
            class="right_buttons"
          >
            <div
              class="btn secondary  "
              style="margin-left: 0px; margin-top: 0px;"
            >
              Cancel
            </div>
            <div
              class="btn primary  "
              style="margin-left: 10px; margin-top: 0px;"
            >
              Ok
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
